manifests/stalwart/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stalwart
  namespace: stalwart
  labels:
    app.kubernetes.io/name: stalwart
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: stalwart
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
    - name: https
      port: 443
      targetPort: https
      protocol: TCP
    - name: smtp
      port: 25
      targetPort: smtp
      protocol: TCP
    - name: submission
      port: 587
      targetPort: submission
      protocol: TCP
    - name: smtps
      port: 465
      targetPort: smtps
      protocol: TCP
    - name: imap
      port: 143
      targetPort: imap
      protocol: TCP
    - name: imaps
      port: 993
      targetPort: imaps
      protocol: TCP
    - name: sieve
      port: 4190
      targetPort: sieve
      protocol: TCP
