manifests/stalwart/ingressroute-tcp.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: stalwart-smtp
  namespace: stalwart
  labels:
    app.kubernetes.io/name: stalwart
spec:
  entryPoints:
    - smtp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: stalwart
          port: 25
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: stalwart-submission
  namespace: stalwart
  labels:
    app.kubernetes.io/name: stalwart
spec:
  entryPoints:
    - submission
  routes:
    - match: HostSNI(`*`)
      services:
        - name: stalwart
          port: 587
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: stalwart-smtps
  namespace: stalwart
  labels:
    app.kubernetes.io/name: stalwart
spec:
  entryPoints:
    - smtps
  routes:
    - match: HostSNI(`*`)
      services:
        - name: stalwart
          port: 465
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: stalwart-imaps
  namespace: stalwart
  labels:
    app.kubernetes.io/name: stalwart
spec:
  entryPoints:
    - imaps
  routes:
    - match: HostSNI(`*`)
      services:
        - name: stalwart
          port: 993
